--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "10.0.9",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
