--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@iconify-icons/ri": "^1.1.0",
+    "@iconify/react": "^1.1.4",
     "next": "10.0.9",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
