--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@iconify-icons/mdi": "^1.1.13",
     "@iconify/icons-ri": "^1.1.0",
     "@iconify/react": "^1.1.4",
     "next": "10.0.9",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rfs": "^9.0.3",
     "sass": "^1.32.8"
   },
   "devDependencies": {
