--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rfs": "^9.0.3",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "swell-js": "^3.8.7"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
