--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "@iconify/icons-ri": "^1.1.0",
@@ -19,8 +20,10 @@
     "swell-js": "^3.8.7"
   },
   "devDependencies": {
+    "cypress": "^7.0.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
